<resources>
    <string name="app_name">Popular Movies Stage 2</string>

    <!-- Main Activity-->
    <string name="sort_option_popular">Most Popular</string>
    <string name="sort_option_top_rated">Highest Rated</string>
    <string name="sort_option_favorite">Favorites</string>
    <string-array name="movies_sort_by">
        <item>@string/sort_option_popular</item>
        <item>@string/sort_option_top_rated</item>
        <item>@string/sort_option_favorite</item>
    </string-array>
    <string name="no_data">No Data Found</string>
    <string name="no_connection">No Internet Connection. Make sure Cellular Data or WiFi is turned on, then try again.</string>

    <!-- Movie Detail Activity-->
    <string name="original_title_label">Original Title:</string>
    <string name="synopsis_label">Plot Synopsis:</string>
    <string name="user_rating_label">User Rating:</string>
    <string name="release_date_label">Release Date:</string>
    <string name="blank_movie_detail">Information not available</string>

    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>

    <string name="favorite_button_tooltip_text">Add to Favorites</string>
    <string name="unfavorite_button_tooltip_text">Remove from Favorites</string>

    <string name="Reviews_label">Reviews</string>
    <string name="Trailers_label">Trailers</string>

    <string name="no_reviews">No Reviews Yet</string>
    <string name="no_trailers">Trailers Unavailable</string>

</resources>
